feat: added operations endpoints
