# app/sdms/docs/api/openapi.osdu.yaml
@@ -72,7 +72,7 @@ paths:
         "403":
           description: Forbidden.
 
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}":
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}:
     post:
       summary: Register a new dataset.
       description: "<ul><li>Register a new dataset in the seismic store.</li><li>Required roles: subproject.admin</li></ul>"
@@ -376,7 +376,7 @@ paths:
             <li>CL (Cannot be Locked).</li>
             <li>UL (Cannot be Unlocked).</ul>\nFor example the reason code <b>[RCODE:RL3600]</b> indicates the dataset is Read Locked with a TTL of 3600 seconds.
 
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/lock":
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/lock:
     put:
       summary: Acquire a lock for a dataset id.
       description: |
@@ -466,7 +466,7 @@ paths:
             <li>CL (Cannot be Locked).</li>
             <li>UL (Cannot be Unlocked).</ul>\nFor example the reason code <b>[RCODE:RL3600]</b> indicates the dataset is Read Locked with a TTL of 3600 seconds.
 
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/unlock":
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/unlock:
     put:
       summary: Remove the lock associated with a dataset id.
       description: |
@@ -533,7 +533,7 @@ paths:
             <li>CL (Cannot be Locked).</li>
             <li>UL (Cannot be Unlocked).</ul>\nFor example the reason code <b>[RCODE:RL3600]</b> indicates the dataset is Read Locked with a TTL of 3600 seconds.
 
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/permission":
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/permission:
     get:
       summary: Retrieve the access permissions of a user on a dataset id.
       description: |
@@ -596,7 +596,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/ctagcheck":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/ctagcheck:
     get:
       summary: "Validate if a dataset ctag matches the pre-existing ctag in metadata catalog."
       description: "<ul><li>Check if the provided dataset cTag match the one stored in the metadata catalog.</li><li>Required roles: subproject.admin, subproject.viewer</li></ul>"
@@ -657,7 +658,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/gtags":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/gtags:
     put:
       summary: Upsert tags to a dataset.
       description: |
@@ -726,7 +728,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/size":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/dataset/{datasetid}/size:
     post:
       summary: Compute and retrieve the size of a dataset and the date of when the size
         was computed
@@ -784,7 +787,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/size":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/size:
     get:
       summary: Retrieve the size of datasets
       description: |
@@ -840,7 +844,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/readdsdirfulllist":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/readdsdirfulllist:
     get:
       summary: Content list.
       description: |
@@ -883,7 +888,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/DatasetAndDirectories"
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}:
     get:
       summary: Get the list of datasets in a subproject.
       description: |
@@ -899,16 +905,18 @@ paths:
           in: query
           name: select
           required: false
-          default: ""
-          type: string
+          schema: 
+            type: string
+            default: ""
         - description: |
             Select single SQL like search parameter example: search=name=file%
             Supported fields: name, tenant, subproject, path, ltag, created_by, gcsurl
           in: query
           name: search
           required: false
-          default: ""
-          type: string
+          schema:
+            type: string
+            default: ""
         - description: "The impersonation token context (required only with impersonation token credentials)"
           in: header
           name: impersonation-token-context
@@ -1030,7 +1038,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/exist":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/exist:
     post:
       summary: Check to see if a list of datasets exists in the subproject.
       description: |
@@ -1082,7 +1091,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/sizes":
+  
+  /dataset/tenant/{tenantid}/subproject/{subprojectid}/sizes:
     post:
       summary: Retrieve the size of datasets.
       description: |
@@ -1136,87 +1146,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/dataset/tenant/{tenantid}/subproject/{subprojectid}/bulk-delete":
-    delete:
-      summary: Delete datasets in a given path within a subproject.
-      description: "<ul><li>Delete datasets within a subproject in seismic store.</li><li>Required roles: users.datalake.admin</li></ul>"
-      operationId: bulk-delete
-      tags:
-        - Dataset
-      parameters:
-        - description: Name of the subproject.
-          in: path
-          name: subprojectid
-          required: true
-          schema:
-            type: string
-        - description: Name of the tenant.
-          in: path
-          name: tenantid
-          required: true
-          schema:
-            type: string
-        - description: Path of datasets to delete within the subproject.
-          in: query
-          name: path
-          required: false
-          schema:
-            type: string
-      responses:
-        "202":
-          description: Delete operation initiated successfully.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DeleteOperation"
-        "400":
-          description: Bad request.
-        "401":
-          description: Unauthorized.
-        "403":
-          description: Forbidden.
-        "404":
-          description: Not found.
-    get:
-      summary: Get status of a bulk delete operation.
-      description: "<ul><li>Get status of a hierarchical delete operation.</li><li>Required roles: none</li></ul>"
-      operationId: bulk-delete-get
-      tags:
-        - Dataset
-      parameters:
-        - description: Name of the subproject.
-          in: path
-          name: subprojectid
-          required: true
-          schema:
-            type: string
-        - description: Name of the tenant.
-          in: path
-          name: tenantid
-          required: true
-          schema:
-            type: string
-        - description: Id of a bulk delete operation.
-          in: query
-          name: operationid
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Retrieved the delete operation successfully.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/DeleteOperationStatus"
-        "400":
-          description: Bad request.
-        "401":
-          description: Unauthorized.
-        "403":
-          description: Forbidden.
-        "404":
-          description: Not found.
+
   /utility/ls:
     get:
       summary: Retrieve the list of datasets and sub-directories inside a seismic store
@@ -1325,6 +1255,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /utility/storage-tiers:
     get:
       summary: Retrieve the list of supported storage tiers
@@ -1343,6 +1274,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /utility/cp:
     post:
       summary: Copy dataset.
@@ -1409,7 +1341,7 @@ paths:
             <li>RL (Read Locked)</li>
             <li>CL (Cannot be Locked)</li>
             <li>UL (Cannot be Unlocked)</ul>\nFor example the reason code <b>[RCODE:RL3600]</b> indicates the dataset is Read Locked with a TTL of 3600 seconds.
-
+  
   /utility/gcs-access-token:
     get:
       summary: Generate a GCS access token.
@@ -1461,6 +1393,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /utility/upload-connection-string:
     get:
       summary: Generate the upload connection credentials string
@@ -1545,6 +1478,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /utility/download-connection-string:
     get:
       summary: Generate the download connection credentials string
@@ -1628,6 +1562,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /imptoken:
     post:
       summary: Generate impersonation credentials token.
@@ -1722,6 +1657,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /impersonation-token:
     post:
       summary: Create an impersonation token credential.
@@ -1795,7 +1731,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/subproject/tenant/{tenantid}/subproject/{subprojectid}":
+  
+  /subproject/tenant/{tenantid}/subproject/{subprojectid}:
     post:
       summary: Create a new subproject.
       description: |
@@ -1983,7 +1920,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/subproject/tenant/{tenantid}":
+  
+  /subproject/tenant/{tenantid}:
     get:
       summary: List subprojects in a tenant.
       description: "<ul><li>Return the list of sub-projects in a tenant.</li><li>Required roles: users.datalake.admin</li></ul>"
@@ -2014,7 +1952,8 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-  "/tenant/{tenantid}":
+  
+  /tenant/{tenantid}:
     post:
       summary: Register a seismic-dms tenant.
       description: "<ul><li>Register a data partition in seismic-dms.</li><li>Required roles: users.datalake.admin</li></ul>"
@@ -2080,6 +2019,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /tenant/sdpath:
     get:
       summary: Retrieve the tenant seismic store path.
@@ -2110,6 +2050,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /user:
     put:
       summary: Add a user to a seismic store subproject authorization group.
@@ -2206,6 +2147,7 @@ paths:
           description: Forbidden.
         '404':
           description: Not found.
+  
   /user/roles:
     get:
       summary: Retrieve user role in all subprojects of the tenant.
@@ -2235,6 +2177,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /app:
     post:
       summary: Register a new application.
@@ -2303,6 +2246,7 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
+  
   /app/trusted:
     post:
       summary: Set a registered application as a trusted application.
@@ -2373,7 +2317,71 @@ paths:
           description: Forbidden.
         "404":
           description: Not found.
-
+  
+  /operations/bulk-delete:
+    put:
+      summary: delete all datasets in a subproject path.
+      description: "<ul>
+                      <li>Description: delete all datasets in the specified sdms subproject path.</li>
+                      <li>Roles: subproject.admin</li></ul>"
+      operationId: operation-bulk-delete-push
+      tags:
+        - Operations
+      parameters:
+        - description: "The sdms subproject path as sd://tenant/subproject/(path)"
+          in: query
+          name: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "202":
+          description: Delete operation initiated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Operation"
+        "400":
+          description: Bad request.
+        "401":
+          description: Unauthorized.
+        "403":
+          description: Forbidden.
+        "404":
+          description: Not found.
+  
+  /operations/bulk-delete/{operation-id}:
+    get:
+      summary: get the bulk delete operation status.
+      description: "<ul>
+                      <li>Description: get the bulk delete operation status.</li>
+                      <li>Roles: subproject.viewer</li></ul>"
+      operationId: operation-bulk-delete-get
+      tags:
+        - Operations
+      parameters:
+        - description: "The bulk delete operation id"
+          in: path
+          name: operation_id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Retrieved the delete operation successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OperationStatus"
+        "400":
+          description: Bad request.
+        "401":
+          description: Unauthorized.
+        "403":
+          description: Forbidden.
+        "404":
+          description: Not found.
+  
 # ===========================================================================
 # Endpoints Models Section
 # ===========================================================================
@@ -3012,53 +3020,6 @@ components:
             - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.admin@slb.p4d.cloud.slb-ds.com
           viewers:
             - data.sdms.tenant.subproject.1b1417e5-fb0e-402a-b725-606723e50b76.viewer@slb.p4d.cloud.slb-ds.com
-    DeleteOperation:
-      required:
-        - operation_id
-      properties:
-        operation_id:
-          type: string
-          description: Operation id of the deletion job.
-      example:
-        operation_id: c3d282e6-e7d1-40d8-8ac2-edc15b6d174c
-    DeleteOperationStatus:
-      required:
-        - operation_id
-        - status
-      properties:
-        operation_id:
-          type: string
-          description: Operation id of the deletion job.
-        created_at:
-          type: string
-          description: Time when the operation was initiated.
-        created_by:
-          type: string
-          description: User who initiated the deletion job.
-        last_updated_at:
-          type: string
-          description: Time when the operation status was last updated.
-        status:
-          type: string
-          description: Status of the deletion job.
-        dataset_cnt:
-          type: number
-          description: Total number of datasets to delete.
-        deleted_cnt:
-          type: number
-          description: Number of deleted datasets.
-        failed_cnt:
-          type: number
-          description: Number of datasets which failed to be deleted.
-      example:
-        operation_id: c3d282e6-e7d1-40d8-8ac2-edc15b6d174c
-        created_at: string
-        created_by: string
-        last_updated_at: string
-        status: Completed
-        dataset_cnt: 1000
-        deleted_cnt: 997
-        failed_cnt: 3
     TenantCreateBody:
       required:
         - gcpid
@@ -3242,3 +3203,51 @@ components:
       example:
         size_bytes: 35461
         dataset_count: 2
+    Operation:
+      required:
+        - operation_id
+      properties:
+        operation_id:
+          type: string
+          description: Operation id of the operation job.
+      example:
+        operation_id: c3d282e6-e7d1-40d8-8ac2-edc15b6d174c
+    OperationStatus:
+      required:
+        - operation_id
+        - status
+      properties:
+        operation_id:
+          type: string
+          description: Operation id of the operation job.
+        created_at:
+          type: string
+          description: Time when the operation was initiated.
+        created_by:
+          type: string
+          description: User who initiated the operation job.
+        last_updated_at:
+          type: string
+          description: Time when the operation status was last updated.
+        status:
+          type: string
+          description: Status of the operation job.
+        dataset_cnt:
+          type: number
+          description: Total number of datasets to process.
+        completed_cnt:
+          type: number
+          description: Number of datasets correctly processed.
+        failed_cnt:
+          type: number
+          description: Number of datasets which processing failed.
+      example:
+        operation_id: c3d282e6-e7d1-40d8-8ac2-edc15b6d174c
+        created_at: string
+        created_by: string
+        last_updated_at: string
+        status: Completed
+        dataset_cnt: 1000
+        completed_cnt: 997
+        failed_cnt: 3
+    
